src/styles/slyd.overrides.css
slyds > slyd-group:not(:last-child) > slyd:last-child::after {
  inset-inline: auto 2vw;
}

slyd.lg-gap {
  gap: var(--size-10)
}

h3, h4, h5, h6 {
  color: var(--text-color-2);
}

slyds > slyd:after, slyds > slyd-group:not(:last-child) > slyd:last-child:after {
  font-size: max(2vmax, 32px);
}

@media (orientation: portrait) and (max-width: 720px) {
  h1, h2, h3, h4, h5, h6, p {
    margin: 0 2vmax;
  }
}

@media (min-width: 1024px) {
  h2.lg-codeblock-adjust {
    transform: translateZ(6px) translateY(50px);
  }

  h2.xl-codeblock-adjust {
    transform: translateZ(6px) translateY(75px);
  }
}

